--- a/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/404.html
+++ b/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/404.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
   <title>404 Page not found – Gallery</title>
-  <link rel="canonical" href="https://orioncandi.github.io/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/404.html" />
+  <link rel="canonical" href="https://orionshoko.github.io/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/404.html" />
   <link rel="icon" type="image/svg+xml" href="/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/images/favicon.svg" />
   <link rel="icon" type="image/png" href="/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/images/favicon.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/images/apple-touch-icon.png" />
