--- a/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/paloma-v2/index.html
+++ b/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/paloma-v2/index.html
@@ -3,13 +3,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
   <title>パロマ第2 – Gallery</title>
-  <link rel="canonical" href="https://orioncandi.github.io/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/paloma-v2/" />
+  <link rel="canonical" href="https://orionshoko.github.io/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/paloma-v2/" />
   <link rel="icon" type="image/svg+xml" href="/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/images/favicon.svg" />
   <link rel="icon" type="image/png" href="/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/images/favicon.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/images/apple-touch-icon.png" />
   <link rel="preload" href="/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/fonts/InterVariable.woff2" as="font" type="font/woff2" crossorigin="anonymous" integrity="sha256-ive9W1RVZ63/s9/Otb7bNTpSLXvxs6K4r3tgZBVrq8A=" />
     <meta name="robots" content="noindex, nofollow, noarchive, noimageindex" />
-  <meta property="og:image" content="https://orioncandi.github.io/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/paloma-v2/2024-01-17-%E8%96%AC%E5%93%81%E5%BA%AB-%E7%8F%BE%E7%8A%B6-1.jpg" /><meta property="article:section" content="" />
+  <meta property="og:image" content="https://orionshoko.github.io/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/paloma-v2/2024-01-17-%E8%96%AC%E5%93%81%E5%BA%AB-%E7%8F%BE%E7%8A%B6-1.jpg" /><meta property="article:section" content="" />
   
   
 
