--- a/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/nagasaka/index.html
+++ b/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/nagasaka/index.html
@@ -3,13 +3,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
   <title>長坂コーテング – Gallery</title>
-  <link rel="canonical" href="https://orioncandi.github.io/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/nagasaka/" />
+  <link rel="canonical" href="https://orionshoko.github.io/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/nagasaka/" />
   <link rel="icon" type="image/svg+xml" href="/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/images/favicon.svg" />
   <link rel="icon" type="image/png" href="/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/images/favicon.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/images/apple-touch-icon.png" />
   <link rel="preload" href="/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/fonts/InterVariable.woff2" as="font" type="font/woff2" crossorigin="anonymous" integrity="sha256-ive9W1RVZ63/s9/Otb7bNTpSLXvxs6K4r3tgZBVrq8A=" />
     <meta name="robots" content="noindex, nofollow, noarchive, noimageindex" />
-  <meta property="og:image" content="https://orioncandi.github.io/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/nagasaka/2023-12-28-%E3%83%89%E3%83%A9%E3%83%A0%E6%95%B0%E3%82%AB%E3%82%A6%E3%83%B3%E3%83%88-%E5%86%85%E9%83%A8.jpg" /><meta property="article:section" content="" />
+  <meta property="og:image" content="https://orionshoko.github.io/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/nagasaka/2023-12-28-%E3%83%89%E3%83%A9%E3%83%A0%E6%95%B0%E3%82%AB%E3%82%A6%E3%83%B3%E3%83%88-%E5%86%85%E9%83%A8.jpg" /><meta property="article:section" content="" />
   
   
 
