--- a/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/404.html
+++ b/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/404.html
@@ -9,80 +9,80 @@
 
     <title>お困りですか？ご心配なく</title>
 
-    <link rel="icon" type="image/svg+xml" href="/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/favicon/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="./d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/favicon/favicon.svg" />
 <link
   rel="icon"
   type="image/png"
   sizes="32x32"
-  href="/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/favicon/favicon-32x32.png"
+  href="./d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/favicon/favicon-32x32.png"
 />
 <link
   rel="icon"
   type="image/png"
   sizes="16x16"
-  href="/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/favicon/favicon-16x16.png"
+  href="./d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/favicon/favicon-16x16.png"
 />
 
     
-  <script src="/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/js/colortheme-8aaebbd9.bundle.min.js"></script>
-<script src="/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/js/main-600fec57.bundle.min.js"></script>
+  <script src="./d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/js/colortheme-8aaebbd9.bundle.min.js"></script>
+<script src="./d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/js/main-600fec57.bundle.min.js"></script>
 
 <link
   rel="preload"
   as="font"
-  href="/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/fonts/Metropolis.woff2"
+  href="./d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/fonts/Metropolis.woff2"
   type="font/woff2"
   crossorigin="anonymous"
 />
 <link
   rel="preload"
   as="font"
-  href="/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/fonts/LiberationSans.woff2"
+  href="./d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/fonts/LiberationSans.woff2"
   type="font/woff2"
   crossorigin="anonymous"
 />
 
 <link
   rel="preload"
-  href="/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/main-a559ecaa.min.css"
+  href="./d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/main-a559ecaa.min.css"
   as="style"
 />
 <link
   rel="stylesheet"
-  href="/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/main-a559ecaa.min.css"
+  href="./d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/main-a559ecaa.min.css"
   media="all"
 />
 
 <link
   rel="preload"
-  href="/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/mobile-79ddc617.min.css"
+  href="./d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/mobile-79ddc617.min.css"
   as="style"
 />
 <link
   rel="stylesheet"
-  href="/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/mobile-79ddc617.min.css"
+  href="./d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/mobile-79ddc617.min.css"
   media="screen and (max-width: 45rem)"
 />
 
 <link
   rel="preload"
-  href="/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/print-735ccc12.min.css"
+  href="./d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/print-735ccc12.min.css"
   as="style"
 />
 <link
   rel="stylesheet"
-  href="/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/print-735ccc12.min.css"
+  href="./d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/print-735ccc12.min.css"
   media="print"
 />
 
 <link
   rel="preload"
-  href="/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/custom.css"
+  href="./d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/custom.css"
   as="style"
 />
 <link
   rel="stylesheet"
-  href="/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/custom.css"
+  href="./d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/custom.css"
   media="all"
 />
 
@@ -107,10 +107,10 @@
         <span class="flex align-center">
           <img
             class="gdoc-brand__img"
-            src="/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/brand.svg"
+            src="./d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/brand.svg"
             alt=""
           />
-          <span class="gdoc-brand__title">Gallery</span>
+          <span class="gdoc-brand__title">オリオン商工</span>
         </span>
       </a>
     </div>
