--- a/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/index.html
+++ b/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/index.html
@@ -591,7 +591,17 @@
     class="gdoc-markdown gdoc-markdown__align--left"
   >
     <h1>オリオン商工</h1>
-    
+    <div class="flex align-center gdoc-page__anchorwrap">
+    <h2 id="2024-03-07"
+    >
+        2024-03-07
+    </h2>
+    <a data-clipboard-text="https://orionshoko.github.io/d280c3b83cfde5bc9e4ab5b2238e904d89f7dd57a8aac008ee255f67ac7ff357/#2024-03-07" class="gdoc-page__anchor clip flex align-center" title="アンカー先: 2024-03-07" aria-label="アンカー先: 2024-03-07" href="#2024-03-07">
+        <svg class="gdoc-icon gdoc_link"><use xlink:href="#gdoc_link"></use></svg>
+    </a>
+</div>
+<p>Start</p>
+
   </article>
 
 
